--- a/android/app/src/main/res/layout/activity_order_detail.xml
+++ b/android/app/src/main/res/layout/activity_order_detail.xml
@@ -211,6 +211,18 @@
                     app:strokeWidth="3dp" />
 
                 <Button
+                    android:id="@+id/btnConfirmOrder"
+                    android:layout_width="183dp"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#437FE4"
+                    android:text="Đã nhận hàng"
+                    android:textColor="#FFFFFF"
+                    android:visibility="gone"
+                    app:cornerRadius="3dp"
+                    app:strokeColor="#A2A1A1"
+                    app:strokeWidth="2dp" />
+
+                <Button
                     android:id="@+id/btnReviewOrderDetail"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
