--- a/android/app/src/main/res/layout/activity_review.xml
+++ b/android/app/src/main/res/layout/activity_review.xml
@@ -2,8 +2,10 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -104,6 +106,22 @@
             app:layout_constraintTop_toBottomOf="@id/reviewInput"
             app:layout_constraintStart_toStartOf="parent" />
 
+        <HorizontalScrollView
+            android:id="@+id/horizontalScrollView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="@+id/addMediaLayout"
+            app:layout_constraintStart_toStartOf="@+id/addMediaLayout"
+            app:layout_constraintTop_toBottomOf="@+id/addMediaLayout"
+            tools:ignore="MissingConstraints">
+
+            <LinearLayout
+                android:id="@+id/mediaLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" />
+        </HorizontalScrollView>
+
         <LinearLayout
             android:id="@+id/addMediaLayout"
             android:layout_width="0dp"
@@ -136,13 +154,14 @@
             android:id="@+id/btnSubmitReview"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="20dp"
             android:backgroundTint="#FF3B5C"
             android:text="Gửi"
             android:textColor="#FFFFFF"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/addMediaLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
