--- a/android/app/src/main/res/layout/item_order_details.xml
+++ b/android/app/src/main/res/layout/item_order_details.xml
@@ -59,5 +59,6 @@
         android:layout_height="wrap_content"
         android:backgroundTint="#FD5858"
         android:text="Đánh giá"
+        android:visibility="gone"
         app:cornerRadius="7dp" />
 </LinearLayout>
