--- a/android/app/src/main/res/layout/item_order_pending.xml
+++ b/android/app/src/main/res/layout/item_order_pending.xml
@@ -77,6 +77,18 @@
             card_view:cornerRadius="3dp"
             card_view:strokeColor="#F25656"
             card_view:strokeWidth="3dp" />
+
+        <Button
+            android:id="@+id/btnConfirmOrder"
+            android:layout_width="183dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#437FE4"
+            android:text="Đã nhận hàng"
+            android:textColor="#FFFFFF"
+            android:visibility="gone"
+            card_view:cornerRadius="3dp"
+            card_view:strokeColor="#B8B4B4"
+            card_view:strokeWidth="2dp" />
         <Button
             android:id="@+id/pendingNotCancel_btn"
             android:layout_width="wrap_content"
