--- a/android/app/src/main/res/layout/activity_review.xml
+++ b/android/app/src/main/res/layout/activity_review.xml
@@ -15,13 +15,24 @@
 
         <!-- Ảnh sản phẩm -->
         <ImageView
+            android:id="@+id/btnBackReview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:padding="8dp"
+            android:src="@drawable/arrow"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
             android:id="@+id/productImage"
             android:layout_width="60dp"
             android:layout_height="60dp"
+            android:layout_marginTop="16dp"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_launcher_background"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btnBackReview" />
 
         <!-- Tiêu đề sản phẩm -->
         <TextView
@@ -52,20 +63,22 @@
             app:layout_constraintTop_toBottomOf="@id/productTitle" />
 
         <!-- Đánh giá sao -->
+
+        <!-- Label: Đánh giá sản phẩm này -->
+
         <RatingBar
             android:id="@+id/ratingBarReview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:numStars="5"
-            android:stepSize="1"
-            android:rating="1"
             android:progressTint="#FFC106"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@id/productImage"
+            android:stepSize="1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/productImage" />
 
-        <!-- Label: Đánh giá sản phẩm này -->
         <TextView
             android:id="@+id/reviewLabel"
             android:layout_width="wrap_content"
