--- a/android/app/src/main/res/layout/item_review.xml
+++ b/android/app/src/main/res/layout/item_review.xml
@@ -34,9 +34,10 @@
         android:textSize="14sp"
         android:layout_marginTop="4dp" />
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        tools:srcCompat="@tools:sample/avatars" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcvListImageReviewer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"/>
+
 </LinearLayout>
