Payment VNPay Done v1, fix UI status order tab history

--- a/android/app/src/main/res/layout/item_order_pending.xml
+++ b/android/app/src/main/res/layout/item_order_pending.xml
@@ -84,6 +84,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="#437FE4"
             android:text="Đã nhận hàng"
+            android:layout_gravity="center_horizontal"
             android:textColor="#FFFFFF"
             android:visibility="gone"
             card_view:cornerRadius="3dp"
