--- a/android/app/src/main/res/layout/activity_update_profile.xml
+++ b/android/app/src/main/res/layout/activity_update_profile.xml
@@ -75,6 +75,7 @@
                 android:id="@+id/tilEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:enabled="false"
                 android:layout_marginTop="16dp"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
